--- a/app/src/main/res/layout/layout_recruiter.xml
+++ b/app/src/main/res/layout/layout_recruiter.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="8dp"
-    android:background="#000000">
+    android:background="#234E70">
 
     <TextView
         android:id="@+id/lblListHeader"
